base: fix `personal collections` alignment

--- a/cds/base/static/less/cds.less
+++ b/cds/base/static/less/cds.less
@@ -52,6 +52,10 @@ body {
 
 /* Navbar */
 .cds-nav-bar {
+  .icon-bar{
+    color: #fff!important;
+    background-color: #fff!important;
+  }
   .cds-navbar-search {
     .form-group{
       width: 100%;
